src/main/kotlin/com/example/midas/global/error/BusinessException.kt
package com.example.midas.global.error

open class BusinessException(
    val errorCode: ErrorCode
): RuntimeException()